src/test/ui/variadic/variadic-ffi.stderr
error[E0045]: variadic function must have C or cdecl calling convention
  --> $DIR/variadic-ffi.rs:15:5
   |
LL |     fn printf(_: *const u8, ...); //~ ERROR: variadic function must have C or cdecl calling
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ variadics require C or cdecl calling convention

error: aborting due to previous error

For more information about this error, try `rustc --explain E0045`.
